search courses by date
